// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on ChangeOrderQuantityForm... ChangeOrderQuantityForm layout Expect ChangeOrderQuantityForm to have a Form with children comp, Header, input and Footer 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... ChangeOrderQuantityForm layout Expect Footer to have 2 Anchor child comps in it 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... ChangeOrderQuantityForm layout Expect Header to have a Heading comp in it 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... ChangeOrderQuantityForm layout Expect to show Label if order prop is valid object 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="column"
      focusable={true}
      margin={
        Object {
          "bottom": "large",
        }
      }
      pad="none"
      responsive={true}
      tag="div"
    >
      <Label
        margin="none"
        size="medium"
      >
        Test Label
      </Label>
    </Box>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={
          Object {
            "ProductName": "Test Label",
            "Qty": 2,
            "_id": 1,
          }
        }
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
        value={2}
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={false}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... Test on prop Expect prop function handleCancel to be called if Anchor Cancel is clicked 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... Test on prop Expect prop function handleSubmit to be called if Form submit or Anchor Update is clicked 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... Test on state Expect quantity state to change if input field is changed 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={Object {}}
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={true}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;

exports[`Testing on ChangeOrderQuantityForm... Test on state Expect quantity state to equal order prop Qty value 1`] = `
<Layer
  align="center"
>
  <Form
    compact={false}
    fill={false}
    onSubmit={[Function]}
    pad="none"
  >
    <Header
      align="center"
      direction="row"
      pad={
        Object {
          "between": "small",
          "horizontal": "none",
          "vertical": "none",
        }
      }
      responsive={false}
    >
      <Heading
        tag="h1"
      >
        Set Quantity
      </Heading>
    </Header>
    <Box
      announce={false}
      direction="column"
      focusable={true}
      margin={
        Object {
          "bottom": "large",
        }
      }
      pad="none"
      responsive={true}
      tag="div"
    >
      <Label
        margin="none"
        size="medium"
      >
        Test Label
      </Label>
    </Box>
    <Box
      announce={false}
      direction="row"
      focusable={true}
      justify="between"
      margin={
        Object {
          "bottom": "medium",
        }
      }
      pad="none"
      responsive={false}
      tag="div"
      wrap={true}
    >
      <OrderMeta
        order={
          Object {
            "ProductName": "Test Label",
            "Qty": 2,
            "_id": 1,
          }
        }
      />
    </Box>
    <FormField
      size="medium"
      strong={false}
    >
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Enter quantity"
        type="number"
        value={2}
      />
    </FormField>
    <Footer
      align="center"
      direction="row"
      justify="between"
      pad={
        Object {
          "vertical": "medium",
        }
      }
      responsive={false}
    >
      <Anchor
        animateIcon={true}
        icon={
          <Close
            responsive={true}
          />
        }
        label="Cancel"
        method="push"
        onClick={[Function]}
        tag="a"
      />
      <Anchor
        animateIcon={true}
        disabled={false}
        icon={
          <LinkNext
            responsive={true}
          />
        }
        label="Update"
        method="push"
        onClick={[Function]}
        primary={true}
        tag="a"
      />
    </Footer>
  </Form>
</Layer>
`;
